added zshenv